--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "commander": "2.14.1",
-    "mongoose": "5.0.7"
+    "instagram-private-api": "0.6.7",
+    "lodash": "4.17.5"
   }
 }
