--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "humps": "2.0.1",
     "instagram-private-api": "0.6.7",
-    "lodash": "4.17.5"
+    "lodash": "4.17.5",
+    "sqlite3": "3.1.13"
   }
 }
