--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "humps": "2.0.1",
     "instagram-private-api": "0.6.7",
     "lodash": "4.17.5",
+    "moment": "2.20.1",
     "sqlite3": "3.1.13"
   }
 }
