An initial stab at getting DynamoDB working with creating a table.
Trying to create an existing table results in the following output
```
Unable to create table. Error JSON: {
  "message": "Cannot create preexisting table",
  "code": "ResourceInUseException",
  "time": "2018-03-04T00:10:49.060Z",
  "requestId": "8b6716e4-35af-43f9-8aa6-5fb91c1629e8",
  "statusCode": 400,
  "retryable": false,
  "retryDelay": 32.58585694691345
}
Unhandled rejection ResourceInUseException: Cannot create preexisting table
    at Request.extractError (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/protocol/json.js:48:27)
    at Request.callListeners (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/sequential_executor.js:105:20)
    at Request.emit (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/sequential_executor.js:77:10)
    at Request.emit (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/request.js:683:14)
    at Request.transition (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/request.js:22:10)
    at AcceptorStateMachine.runTo (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/state_machine.js:14:12)
    at /Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/state_machine.js:26:10
    at Request.<anonymous> (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/request.js:38:9)
    at Request.<anonymous> (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/request.js:685:12)
    at Request.callListeners (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/sequential_executor.js:115:18)
    at Request.emit (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/sequential_executor.js:77:10)
    at Request.emit (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/request.js:683:14)
    at Request.transition (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/request.js:22:10)
    at AcceptorStateMachine.runTo (/Users/aromeo/workspace/instagrow/node_modules/aws-sdk/lib/sta

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "2.14.1",
+    "aws-sdk": "2.205.0",
     "humps": "2.0.1",
     "instagram-private-api": "0.6.7",
     "lodash": "4.17.5",
