--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "commander": "2.14.1",
     "humps": "2.0.1",
     "instagram-private-api": "0.6.7",
     "lodash": "4.17.5",
