Basic ability to like followers content

--- a/_config.sample.json
+++ b/_config.sample.json
@@ -1,5 +1,6 @@
 {
   "username": "",
   "password": "",
-  "followingInteractionDeltaInDays": 3
+  "followingInteractionDeltaInDays": 3,
+  "followerInteractionDeltaInDays": 14
 }
