--- a/serverless.yml
+++ b/serverless.yml
@@ -1,105 +1,83 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
+service: instagrow
 
-service: temp
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+frameworkVersion: ">=1.0.0 <2.0.0"
 
 provider:
   name: aws
   runtime: nodejs6.10
   profile: instagrow
-
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
-
-# you can add statements to the Lambda function's IAM Role here
-#  iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:ListBucket"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:PutObject"
-#      Resource:
-#        Fn::Join:
-#          - ""
-#          - - "arn:aws:s3:::"
-#            - "Ref" : "ServerlessDeploymentBucket"
-#            - "/*"
-
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.js
-#    - exclude-me-dir/**
+  timeout: 200
+  versionFunctions: false
+  iamRoleStatements: # permissions for all of your functions can be set here
+    - Effect: Allow
+      Action: # Gives permission to DynamoDB tables in a specific region
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 functions:
-  hello:
-    handler: handler.hello
+  getFollowingAndFollowers:
+    handler: handler.getFollowingAndFollowers
+    reservedConcurrency: 1
+    events:
+      - schedule:
+          rate: cron(53 20 ? * 1-5 *)
+          input:
+            account: ${opt:account}
+      - schedule:
+          rate: cron(53 3 ? * 6-7 *)
+          input:
+            account: ${opt:account}
+  updateInteractionActivity:
+    handler: handler.updateInteractionActivity
+    reservedConcurrency: 1
+    events:
+      - schedule:
+          rate: cron(11 21 ? * 1-5 *)
+          input:
+            account: ${opt:account}
+      - schedule:
+          rate: cron(11 4 ? * 6-7 *)
+          input:
+            account: ${opt:account}
+  addPendingLikeMediaToQueue:
+    handler: handler.addPendingLikeMediaToQueue
+    reservedConcurrency: 1
+    events:
+      - schedule:
+          rate: cron(20 21 ? * 1-5 *)
+          input:
+            account: ${opt:account}
+      - schedule:
+          rate: cron(20 4 ? * 6-7 *)
+          input:
+            account: ${opt:account}
+  updateLikedMedia:
+    handler: handler.updateLikedMedia
+    events:
+      - schedule:
+          rate: cron(18/16 0-1,22-23 ? * 1-5 *)
+          input:
+            account: ${opt:account}
+      - schedule:
+          rate: cron(18/16 5-8 ? * 6-7 *)
+          input:
+            account: ${opt:account}
 
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
+plugins:
+  - serverless-dynamodb-local
+  - serverless-offline
+  - serverless-webpack
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+custom:
+  webpackIncludeModules: true
+  dynamodb:
+    start:
+      port: 8000
+      migrate: true
+      noStart: true
