--- a/package.json
+++ b/package.json
@@ -5,27 +5,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "2.205.0",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.4",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-stage-3": "6.24.1",
-    "babel-runtime": "6.26.0",
     "commander": "2.14.1",
-    "dotenv": "5.0.1",
+    "aws-sdk": "2.205.0",
     "humps": "2.0.1",
     "instagram-private-api": "0.6.7",
     "lodash": "4.17.5",
     "moment": "2.20.1",
-    "serverless-webpack": "5.1.0",
-    "webpack": "3.11.0",
-    "webpack-node-externals": "1.6.0"
-  },
-  "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "serverless-dynamodb-local": "0.2.28",
-    "serverless-offline": "3.18.0"
+    "sqlite3": "3.1.13"
   }
 }
