--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,7 @@ provider:
   profile: instagrow
   timeout: 200
   versionFunctions: false
+  region: ca-central-1
   iamRoleStatements: # permissions for all of your functions can be set here
     - Effect: Allow
       Action: # Gives permission to DynamoDB tables in a specific region
@@ -18,12 +19,12 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:us-east-1:*:*"
+      Resource: "arn:aws:dynamodb:ca-central-1:*:*"
 
 functions:
   getFollowingAndFollowers:
     handler: handler.getFollowingAndFollowers
-    reservedConcurrency: 1
+    enabled: false
     events:
       - schedule:
           rate: cron(53 20 ? * 1-5 *)
@@ -35,7 +36,7 @@ functions:
             account: ${opt:account}
   updateInteractionActivity:
     handler: handler.updateInteractionActivity
-    reservedConcurrency: 1
+    enabled: false
     events:
       - schedule:
           rate: cron(11 21 ? * 1-5 *)
@@ -47,7 +48,7 @@ functions:
             account: ${opt:account}
   addPendingLikeMediaToQueue:
     handler: handler.addPendingLikeMediaToQueue
-    reservedConcurrency: 1
+    enabled: false
     events:
       - schedule:
           rate: cron(20 21 ? * 1-5 *)
@@ -59,6 +60,7 @@ functions:
             account: ${opt:account}
   updateLikedMedia:
     handler: handler.updateLikedMedia
+    enabled: false
     events:
       - schedule:
           rate: cron(18/16 0-1,22-23 ? * 1-5 *)
