--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.6.1",
     "serverless-dynamodb-local": "0.2.28",
-    "serverless-offline": "3.18.0"
+    "serverless-offline": "3.18.0",
+    "serverless-plugin-aws-alerts": "1.2.4"
   }
 }
