--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
   name: aws
   runtime: nodejs6.10
   profile: instagrow
-  timeout: 250
+  timeout: 290
   versionFunctions: false
   region: ca-central-1
   vpc:
@@ -16,8 +16,8 @@ provider:
       - subnet-252a395e
       - subnet-722a3909
   environment:
-    # ACCOUNT: ${file(./serverless.env.yml):${opt:stage}.ACCOUNT}
-    # PASSWORD: ${file(./serverless.env.yml):${opt:stage}.PASSWORD}
+    ACCOUNT: ${file(./serverless.env.yml):${opt:stage}.ACCOUNT}
+    PASSWORD: ${file(./serverless.env.yml):${opt:stage}.PASSWORD}
     FOLLOWING_INTERACTION_DELTA_IN_DAYS: ${file(./serverless.env.yml):${opt:stage}.FOLLOWING_INTERACTION_DELTA_IN_DAYS}
     FOLLOWER_INTERACTION_DELTA_IN_DAYS: ${file(./serverless.env.yml):${opt:stage}.FOLLOWER_INTERACTION_DELTA_IN_DAYS}
   iamRoleStatements: # permissions for all of your functions can be set here
@@ -39,45 +39,68 @@ functions:
     handler: handler.setUpNewUserConfig
   setUpScalingPolicy:
     handler: handler.setUpScalingPolicy
-  getFollowingAndFollowers:
-    handler: handler.getFollowingAndFollowers
+  functionHandler:
+    handler: handler.functionHandler
+  getFollowing:
+    handler: handler.getFollowing
     events:
       - schedule:
           enabled: true
-          rate: cron(*/20 0-4 ? * * *)
+          rate: cron(20 1 ? * * *)
       - schedule:
           enabled: true
-          rate: cron(*/20 11-13 ? * 1-5 *)
+          rate: cron(20 11 ? * 1-5 *)
       - schedule:
           enabled: true
-          rate: cron(*/20 13-16 ? * 6-7 *)
+          rate: cron(20 13 ? * 6-7 *)
+  getFollowers:
+    handler: handler.getFollowers
+    events:
+      - schedule:
+          enabled: true
+          rate: cron(30 1 ? * * *)
+      - schedule:
+          enabled: true
+          rate: cron(30 11 ? * 1-5 *)
+      - schedule:
+          enabled: true
+          rate: cron(30 13 ? * 6-7 *)
   updateInteractionActivity:
     handler: handler.updateInteractionActivity
     events:
       - schedule:
-          enabled: false
-          rate: cron(11 21 ? * 1-5 *)
+          enabled: true
+          rate: cron(40 0-4 ? * * *)
       - schedule:
-          enabled: false
-          rate: cron(11 4 ? * 6-7 *)
-  addPendingLikeMediaToQueue:
-    handler: handler.addPendingLikeMediaToQueue
+          enabled: true
+          rate: cron(40 11-13 ? * 1-5 *)
+      - schedule:
+          enabled: true
+          rate: cron(40 13-16 ? * 6-7 *)
+  queuePendingLikeMedia:
+    handler: handler.queuePendingLikeMedia
     events:
       - schedule:
           enabled: false
-          rate: cron(20 21 ? * 1-5 *)
+          rate: cron(50 0-4 ? * * *)
       - schedule:
           enabled: false
-          rate: cron(20 4 ? * 6-7 *)
+          rate: cron(50 11-13 ? * 1-5 *)
+      - schedule:
+          enabled: false
+          rate: cron(50 13-16 ? * 6-7 *)
   updateLikedMedia:
     handler: handler.updateLikedMedia
     events:
       - schedule:
-          enabled: false
-          rate: cron(18/16 0-1,22-23 ? * 1-5 *)
+          enabled: true
+          rate: cron(*/10 1-5 ? * * *)
       - schedule:
-          enabled: false
-          rate: cron(18/16 5-8 ? * 6-7 *)
+          enabled: true
+          rate: cron(*/10 12-14 ? * 1-5 *)
+      - schedule:
+          enabled: true
+          rate: cron(*/10 14-17 ? * 6-7 *)
 
 plugins:
   - serverless-dynamodb-local
