--- a/serverless.yml
+++ b/serverless.yml
@@ -46,36 +46,24 @@ functions:
     events:
       - schedule:
           enabled: true
-          rate: cron(20 1 ? * * *)
-      - schedule:
-          enabled: true
-          rate: cron(20 11 ? * 1-5 *)
-      - schedule:
-          enabled: true
-          rate: cron(20 13 ? * 6-7 *)
+          rate: cron(10,20,30,40 11 ? * * *)
   getFollowers:
     handler: handler.getFollowers
     events:
       - schedule:
           enabled: true
-          rate: cron(30 1 ? * * *)
-      - schedule:
-          enabled: true
-          rate: cron(30 11 ? * 1-5 *)
-      - schedule:
-          enabled: true
-          rate: cron(30 13 ? * 6-7 *)
+          rate: cron(15,25,35,45 11 ? * * *)
   updateInteractionActivity:
     handler: handler.updateInteractionActivity
     events:
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(40 0-4 ? * * *)
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(40 11-13 ? * 1-5 *)
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(40 13-16 ? * 6-7 *)
   queuePendingLikeMedia:
     handler: handler.queuePendingLikeMedia
@@ -93,13 +81,13 @@ functions:
     handler: handler.updateLikedMedia
     events:
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(*/10 1-5 ? * * *)
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(*/10 12-14 ? * 1-5 *)
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(*/10 14-17 ? * 6-7 *)
 
 plugins:
