--- a/serverless.yml
+++ b/serverless.yml
@@ -53,18 +53,18 @@ functions:
       - schedule:
           enabled: true
           rate: cron(15,25,35,45 11 ? * * *)
+  getLatestMediaOfAccounts:
+    handler: handler.getLatestMediaOfAccounts
+    events:
+      - schedule:
+          enabled: true
+          rate: cron(*/5 12,1,2 ? * * *)
   updateInteractionActivity:
     handler: handler.updateInteractionActivity
     events:
       - schedule:
-          enabled: false
-          rate: cron(40 0-4 ? * * *)
-      - schedule:
-          enabled: false
-          rate: cron(40 11-13 ? * 1-5 *)
-      - schedule:
-          enabled: false
-          rate: cron(40 13-16 ? * 6-7 *)
+          enabled: true
+          rate: cron(0,20,40 12,2,4,6 ? * * *)
   queuePendingLikeMedia:
     handler: handler.queuePendingLikeMedia
     events:
