--- a/serverless.yml
+++ b/serverless.yml
@@ -63,7 +63,7 @@ functions:
     handler: handler.updateInteractionActivity
     events:
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(0,20,40 11,1,3,5 ? * * *)
   queuePendingLikeMedia:
     handler: handler.queuePendingLikeMedia
