--- a/serverless.yml
+++ b/serverless.yml
@@ -11,10 +11,10 @@ provider:
   region: ca-central-1
   vpc:
     securityGroupIds:
-      - ***REMOVED***
+      - ${file(./serverless.env.yml):${opt:stage}.SECURITY_GROUP}
     subnetIds:
-      - ***REMOVED***
-      - ***REMOVED***
+      - ${file(./serverless.env.yml):${opt:stage}.SUBNET_01}
+      - ${file(./serverless.env.yml):${opt:stage}.SUBNET_02}
   environment:
     ACCOUNT: ${file(./serverless.env.yml):${opt:stage}.ACCOUNT}
     PASSWORD: ${file(./serverless.env.yml):${opt:stage}.PASSWORD}
@@ -63,7 +63,7 @@ functions:
     handler: handler.updateInteractionActivity
     events:
       - schedule:
-          enabled: true
+          enabled: false
           rate: cron(0,20,40 11,1,3,5 ? * * *)
   queuePendingLikeMedia:
     handler: handler.queuePendingLikeMedia
