--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,7 @@ provider:
     PASSWORD: ${file(./serverless.env.yml):${opt:stage}['PASSWORD']}
     FOLLOWING_INTERACTION_DELTA_IN_DAYS: ${file(./serverless.env.yml):${opt:stage}.FOLLOWING_INTERACTION_DELTA_IN_DAYS}
     FOLLOWER_INTERACTION_DELTA_IN_DAYS: ${file(./serverless.env.yml):${opt:stage}.FOLLOWER_INTERACTION_DELTA_IN_DAYS}
+    SES_ACCOUNT: ${file(./serverless.env.yml):${opt:stage}.SES_ACCOUNT}
   iamRoleStatements: # permissions for all of your functions can be set here
     - Effect: Allow
       Action: # Gives permission to DynamoDB tables in a specific region
